# PX4-State-Sharing-Demo

./: .gitignore  Makefile  README.md  gz_error.md  run_experiments.sh  start.sh
docker/: Dockerfile  build.sh  config.sh  dds_topics.yaml  requirements.txt  tmux.conf
experiment/default/: launch_simulation.yml
experiment/sep_gz/: .tmuxinator.yml  launch_simulation.yml
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/install/state_sharing_demo/include/: offboard_control_srv.hpp
workspace/install/state_sharing_demo/lib/state_sharing_demo/: offboard_control_main
workspace/install/state_sharing_demo/share/ament_index/resource_index/parent_prefix_path/: state_sharing_demo
workspace/install/state_sharing_demo/share/state_sharing_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/install/state_sharing_demo/share/state_sharing_demo/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  state_sharing_demoConfig.cmake
workspace/log/: latest_build
workspace/src/state_sharing_demo/: CMakeLists copy.txt  CMakeLists.txt  README.md  package.xml
workspace/src/state_sharing_demo/app/: offboard_control_main.cpp
workspace/src/state_sharing_demo/apps/: distance_plotter.py  offboard_control_main.cpp
workspace/src/state_sharing_demo/include/: offboard_control_srv.hpp  state_machine.hpp  transforms.hpp  velocity_controller.hpp
workspace/src/state_sharing_demo/src/: offboard_control_srv.cpp  offboard_control_srv_old.cpp  velocity_controller.cpp
workspace/src/state_sharing_demo/src/offboard/: offboard_control_srv.cpp  offboard_control_srv.hpp
